--- a/templates/study_approve_request.json
+++ b/templates/study_approve_request.json
@@ -64,7 +64,7 @@
         "action": {
           "type": "postback",
           "label": "承認する",
-          "data": "action=study_approve&target=${user_id}&minutes=${earned_exp}"
+          "data": "action=study_approve&target=${user_id}&minutes=${minutes}&exp=${earned_exp}"
         }
       }
     ]
