--- a/templates/approval_card_study.json
+++ b/templates/approval_card_study.json
@@ -52,7 +52,7 @@
         "action": {
           "type": "postback",
           "label": "承認",
-          "data": "action=study_approve&row_id=${row_index}&target=${user_id}&minutes=${earned_exp}"
+          "data": "action=study_approve&row_id=${row_index}&target=${user_id}&minutes=${earned_exp}&time=${time}"
         }
       },
       {
